Refactoring | Chess Game System